[package]
name = "roughly-rs"
description = "A Rust library for the RoughlyRight API"
license = "MIT"
version = "0.1.5"
edition = "2021"
repositiory = "https://github.com/24hr-malmo/rougly-rs"

[dependencies]
reqwest = { version = "0.12.7", features = [ "json", "cookies" ] }
serde = { version = "1.0.210", features = [ "derive" ] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
